--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_container"
-    android:name="com.example.criminalintentapp.CrimeListFragment"
+    android:name="androidx.navigation.fragment.NavHostFragment"
+    app:defaultNavHost = "true"
+    app:navGraph = "@navigation/nav_graph"
     tools:context=".MainActivity">
 
 
